tests/paczka1/small_fuzzy/60299038.err
Error in line 6: A516 A516 81,7
Error in line 8: A516 A67 68,2
